[flake8]
exclude = .tox,*.egg

[metadata]
name = aping
version = 1.0.0
description = Latency monitoring using InfluxDB and Grafana
author = Laurent COUSTET
author_email = laurent.coustet@clarisys.fr
url = https://github.com/zehome/aping
requires-python = >=3.5

[options]
packages = find:
install_requires =
    attrs
    requests
    PyYAML
    aioinflux
